--- a/Main/Includes/LESS/style/style.less
+++ b/Main/Includes/LESS/style/style.less
@@ -1217,7 +1217,7 @@ body {
 			display: inline-block;
 			padding: 10px;
 			border-radius: 5px;
-			overflow: scroll;
+			overflow: auto;
 			max-height: 600px;
 			.feedbackUser {
 				min-width: 800px;
@@ -1446,8 +1446,16 @@ body {
 		display: inline-block;
 		background-color: rgba(0, 153, 255, 0.9);
 		width: 100vw;
+		min-height: 100vh;
 		padding-top: 80px;
 		#prototypeForm {
+			form {
+				input {
+					display: none;
+				}
+			}
+		}
+		#prototypeForm , #interviewForm, #pitchForm {
 			padding: 15px;
 			background-color: @white;
 			width: 90vw;
@@ -1458,9 +1466,11 @@ body {
 				img {
 					max-width: 90%;
 				}
+
 				input {
-					display: none;
+					margin: 5px;
 				}
+
 				#submit1 {
 					display: inline-block;
 				}
